=====================================================================
	Change Log
	Genmod

	This and other information can be found online at
	http://www.genmod.net/

	# $Id$
=====================================================================

Version 2.0 beta 2
- Added number of files per folder in media management (sjouke)
- Moved media types to MediaFS class (sjouke)
- Added gendex file generation script (sjouke)
- Fixed upcoming events, alive only, displays marriages of dead people (sjouke)
- Added adminmenu class for unified admin menus (sjouke)
- Fixed cleanup messages older than option (sjouke)
- Fixed facts with only year don't sort properly (sjouke)
- Added option to exclude IP(range) from require authentication or not (sjouke)
- Fixed find doesn't accept 1 chinese character as input (sjouke)
- Fixed window.opener.location.reload (sjouke)
- Fixed options jumping around in index edit (sjouke)
- Fixed space before VFS in footer text (sjouke)
- Added check for L1 sources if no L2 are found in sanity check (sjouke)
- Fixed wrong display of changes on new, unapproved indi (sjouke)
- Removed debug code from edit_interface (sjouke)
- Changed version number to 2.0 beta 2 (sjouke)
- Added check for 1 to 1 relation indi-fam in sanitycheck (sjouke)
- Fixed DEBUG constant not set in install (sjouke)
- Fixed custompage contains obsolete quote (sjouke)
- Fixed config_maint cannot delete system config (sjouke)
- Fixed handling of backslashes in search/find terms (sjouke)
- Fixed printer friendly version of search shows no results (sjouke)

Version 2.0 beta 1
- Fixed note favorites don't display in menu and blocks (sjouke)
- Fixed various language files contain English texts (sjouke)
- Various other additions and fixes, see http://www.genmod.net

Version 1.7 final
- Fixed delete person should also delete ASSO pointers from others (sjouke)
- Fixed print relatives in search is broken (sjouke)
- Added moved asso relations to DB eliminating table scans (sjouke) 